@@ -1,6 +1,6 @@
 
 /*
- * $Id: stat.c,v 1.151 1997/08/09 04:48:09 wessels Exp $
+ * $Id: stat.c,v 1.152 1997/08/09 05:42:36 wessels Exp $
  *
  * DEBUG: section 18    Cache Manager Statistics
  * AUTHOR: Harvest Derived
@@ -136,6 +136,9 @@ static int memoryAccounted _PARAMS((void));
 #ifdef XMALLOC_STATISTICS
 static void info_get_mallstat _PARAMS((int, int, StoreEntry *));
 #endif
+
+#define PCONN_HIST_SZ 256
+int client_pconn_hist[PCONN_HIST_SZ];
 
 /* process utilization information */
 static void
@@ -837,7 +840,6 @@ stat_init(cacheinfo ** object, const char *logfilename)
 {
     cacheinfo *obj = NULL;
     int i;
-
     debug(18, 5) ("stat_init: Initializing...\n");
     obj = xcalloc(1, sizeof(cacheinfo));
     if (logfilename)
@@ -885,4 +887,33 @@ stat_init(cacheinfo ** object, const char *logfilename)
 	obj->proto_stat_data[i].kb.now = 0;
     }
     *object = obj;
+	for (i=0; i<PCONN_HIST_SZ; i++)
+		client_pconn_hist[i] = 0;
+}
+
+void
+pconnHistCount(int what, int i)
+{
+    if (i >= PCONN_HIST_SZ)
+	i = PCONN_HIST_SZ - 1;
+    /* what == 0 for client, 1 for server */
+    if (what == 0)
+	client_pconn_hist[i]++;
+}
+
+void
+pconnHistDump(StoreEntry * e)
+{
+    int i;
+    storeAppendPrintf(e,
+	"Client-side persistent connection counts:\n"
+	"\n"
+	"req/\n"
+	"conn      count\n"
+	"----  ---------\n");
+    for (i = 0; i < PCONN_HIST_SZ; i++) {
+	if (client_pconn_hist[i] == 0)
+	    continue;
+	storeAppendPrintf(e, "%4d  %9d\n", i, client_pconn_hist[i]);
+    }
 }
